objects/gvp__National_Email__c.object
<CustomObject>
    <description>Related to Account and used to send Authorization email</description>
    <fields>
        <fullName>gvp__Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Authorization_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Attachment_ID_List__c</fullName>
        <inlineHelpText>Holds a list of attachment IDs.  These attachments will be sent with the email.</inlineHelpText>
        <label>Attachment ID List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Authorization_ID_List__c</fullName>
        <label>Authorization ID List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__End_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Placement_ID_List__c</fullName>
        <label>Placement ID List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Program_Detail__c</fullName>
        <label>Program Detail</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>National Email</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Program_Detail__c</columns>
        <columns>gvp__Program_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All National Emails</label>
    </listViews>
    <listViews>
        <fullName>gvp__All_National_Email_Records</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Program_Detail__c</columns>
        <columns>gvp__Program_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All National Email Records</label>
    </listViews>
    <nameField>
        <label>National Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>National Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>